deployment/gke-dev-env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
  namespace: social
  labels:
    app: social-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      containers:
        - name: social-service
          image: gcr.io/fitcentive-dev-03/social:1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: 500Mi
              cpu: "0.1"
            limits:
              memory: 800Mi
              cpu: "0.5"
          ports:
            - name: http-port
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /api/social/healthz
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /api/social/health
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
