deployment/gke-dev-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-service
  namespace: social
spec:
  type: ClusterIP
  selector:
    app: social-service
  ports:
    - protocol: TCP
      name: http
      port: 9000
